--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pdoc
+        pip install -r requirements.txt
 
     - name: Generate Documentation
       run: |
