--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pdoc
         pip install -r requirements.txt
+        pip install pangolin
 
     - name: Generate Documentation
       run: |
