--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,19 @@ jobs:
       with:
         python-version: '3.12'  # Specify your Python version
 
-    - name: Install dependencies
+    - name: Install local package
       run: |
         python -m pip install --upgrade pip
-        pip install pdoc
-        pip install -r requirements.txt
         pip install .
 
+    - name: Install dependencies
+      run: |
+        pip install pdoc
+        pip install -r requirements.txt
+
     - name: Generate Documentation
+      env:
+        PYTHONPATH: ${{ github.workspace }}  # Add this line
       run: |
         pdoc --docformat numpy -n pangolin -o ./docs
 
