--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,49 @@
-name: Deploy Documentation
+name: website
 
+# build the documentation whenever there are new commits on main
 on:
   push:
     branches:
-      - main  # Change to your default branch if it's different
+      - main
+    # Alternative: only build for tags.
+    # tags:
+    #   - '*'
+
+# security: restrict permissions for CI jobs.
+permissions:
+  contents: read
 
 jobs:
+  # Build the documentation and upload the static HTML files as an artifact.
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.12'  # Specify your Python version
+      # ADJUST THIS: install all dependencies (including pdoc)
+      - run: pip install pdoc
+      - run: pip install -r requirements.txt
+      - run: pip install -e .
+      - run: pdoc --docformat numpy -n pangolin -o ./docs
 
-    - name: Install local package
-      run: |
-        python -m pip install --upgrade pip
-        pip install .
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/
 
-    - name: Install dependencies
-      run: |
-        pip install pdoc
-        pip install -r requirements.txt
-
-    - name: Test pangolin import
-      run: |
-        python -c "import pangolin"
-
-    - name: Generate Documentation
-      env:
-        PYTHONPATH: ${{ github.workspace }}  # Add this line
-      run: |
-        pdoc --docformat numpy -n pangolin -o ./docs
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs
-        publish_branch: gh-pages  # Optional: set to a different branch if needed
+  # Deploy the artifact to GitHub pages.
+  # This is a separate job so that only actions/deploy-pages has the necessary permissions.
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - id: deployment
+        uses: actions/deploy-pages@v4
