small test cleanup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,17 @@ dependencies = [
     "numpy",
     "scipy",
     "numpyro",
+    "funsor>=0.4.5",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
