--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
       # ADJUST THIS: install all dependencies (including pdoc)
       - run: pip install pdoc
-      - run: pip install -e .
+      - run: pip install -e ".[torch]"
       - run: pdoc --docformat numpy -n pangolin -o ./docs  --logo "https://raw.githubusercontent.com/justindomke/pangolin/main/pangolin.jpg"
 
       - uses: actions/upload-pages-artifact@v3
