--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dev = [
 ]
 
 [project.optional-dependencies]
-torch = ["torch"]
+torch = ["torch","funtorch"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
