--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,15 @@ dev = [
     "jupyter",
     "seaborn",
 ]
+docs = [
+    "sphinx",
+    "myst-parser",
+    "sphinx-autobuild>=2025.8.25",
+    "sphinx-autodoc2>=0.5.0",
+    "pydata-sphinx-theme>=0.16.1",
+    "sphinx-book-theme>=1.1.3",
+    "sphinx-autodoc-typehints>=3.5.2",
+]
 
 [project.optional-dependencies]
 torch = ["torch","funtorch"]
