--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,6 @@ permissions:
   contents: read
 
 jobs:
-  # Build the documentation and upload the static HTML files as an artifact.
   build:
     runs-on: ubuntu-latest
     steps:
@@ -22,7 +21,7 @@ jobs:
       - uses: astral-sh/setup-uv@v4
 
       - run: uv python install 3.12
-      - run: uv run --group docs sphinx-build -M html docs/source docs/build
+      - run: uv run --group docs --extra torch sphinx-build -M html docs/source docs/build
 
       - uses: actions/upload-pages-artifact@v3
         with:
