--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dev = [
     "black",
     "pytest",
     "pytest-clarity",
+    "pytest-timeout",
     "arviz",
     "ty",
 ]
@@ -52,6 +53,7 @@ norecursedirs = [
     "dist", 
     "build"
 ]
+timeout = 10
 
 [tool.black]
 line-length = 120
